--- a/index.html
+++ b/index.html
@@ -1,9 +1,104 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Product Gallery</title>
-</head>
-<body>
-    <h1>Bun Bun bake shop</h1>
-</body>
+<html lang="en">
+  <head>
+    <title>Isabella Shi Portfolio</title>
+    <meta charset="UTF-8">
+
+    <!-- Link to css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!--<script defer src="js/mainPage.js"></script>-->
+  </head>
+  <body>
+    <div class="div">
+        <div class="div-2">
+          <div class="div-3">PORTFOLIO</div>
+          <div class="div-4">
+            <div class="div-5">
+              <div class="div-6">About Me</div>
+              <div class="div-7">My Work</div>
+              <div class="div-8">Resume</div>
+              <div class="div-9">Contact</div>
+            </div>
+            <div class="div-10"></div>
+          </div>
+        </div>
+        <div class="div-11">
+          <div class="div-12">
+            <div class="column">
+              <div class="div-13">
+                <div class="div-14">
+                  Isabella
+                  <br />
+                  Shi
+                </div>
+                <div class="div-15">
+                  I'm a junior at Carnegie Mellon University, currently pursuing a B.
+                  Arch. degree with an additional major in Human-Computer Interaction.
+                  My passion lies at the intersection of architecture and technology.
+                </div>
+                <div class="div-16">Contact Me</div>
+              </div>
+            </div>
+            <div class="column-2">
+              <img
+                loading="lazy"
+                srcset="..."
+                class="img"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="div-17">
+          <img
+            loading="lazy"
+            srcset="..."
+            class="img-2"
+          />
+          <div class="div-18">
+            <div class="div-19">My Work</div>
+            <div class="div-20">
+              <div class="div-21">By Type</div>
+              <div class="div-22">By Location</div>
+              <div class="div-23">By Date</div>
+            </div>
+            <div class="div-24">
+              <div class="div-25">HCI</div>
+              <div class="div-26">ARCHITECTURE</div>
+              <div class="div-27">
+                <div class="div-28">
+                  <div class="column-3">
+                    <img
+                      loading="lazy"
+                      srcset="..."
+                      class="img-3"
+                    />
+                  </div>
+                  <div class="column-4">
+                    <img
+                      loading="lazy"
+                      srcset="..."
+                      class="img-4"
+                    />
+                  </div>
+                  <div class="column-5">
+                    <img
+                      loading="lazy"
+                      srcset="..."
+                      class="img-5"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="div-29">RESEARCH</div>
+            </div>
+          </div>
+        </div>
+        <img
+          loading="lazy"
+          srcset="..."
+          class="img-6"
+        />
+      </div>
+  </body>
 </html>
+
