--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <script defer src="js/projectData.js"></script>
     <script defer src="js/script.js"></script>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anek+Latin&family=Birthstone+Bounce">
   </head>
 
   <!-- Main Page of My Portfolio Website-->
