Update individual project page algorithm

--- a/projectDetail.html
+++ b/projectDetail.html
@@ -24,6 +24,7 @@
   <body>
 
     <header id = "projectDetailHeader"></header>
+    <p id = "projectDescription"></p>
     <div id = "projectDetailImages"></div>
 
   </body>
