--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Timeline Library -->
-    <script src="/dist/js/timeline.min.js"></script>
-    <link href="/dist/css/timeline.min.css" rel="stylesheet" />
+    <script src="./dist/js/timeline.min.js"></script>
+    <link href="./dist/css/timeline.min.css" rel="stylesheet" />
 
     <script src="//unpkg.com/globe.gl"></script>
 
