--- a/projectDetail.html
+++ b/projectDetail.html
@@ -44,13 +44,13 @@
     </header>
 
     <!-- Create the structure that will be populated with project information based on the URL param query-->
-    <h1 id = "projectDetailHeader"></h1> <!-- Header to display project title-->
+    <h1 id = "projectDetailHeader">Sample Title</h1> <!-- Header to display project title-->
     <div id = "projectInfoBox"> <!-- Container to hold additional project attributes-->
-      <div id = "projectInfoBoxType"></div> <!-- List the project type-->
-      <div id = "projectInfoBoxLocation"></div> <!-- List the project location-->
-      <div id = "projectInfoBoxDate"></div> <!-- List the project date-->
+      <div id = "projectInfoBoxType">Sample Type</div> <!-- List the project type-->
+      <div id = "projectInfoBoxLocation">Sample Location</div> <!-- List the project location-->
+      <div id = "projectInfoBoxDate">Sample Date</div> <!-- List the project date-->
     </div>
-    <p id = "projectDescription"></p> <!-- Paragraph element to contain project description text-->
+    <p id = "projectDescription">Sample Description</p> <!-- Paragraph element to contain project description text-->
     <div id = "projectDetailImages"></div> <!-- container to hold project images, dynamically added from projectDetail.js-->
 
   </body>
